helloworld/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  selector:
    matchLabels:
      app: helloworld
  replicas: 2 
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: mtr.devops.telekom.de/mcsps/nginx-non-root:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          runAsNonRoot: true
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: helloworld-config
        - name: tmp
          mountPath: /tmp
        - name: run
          mountPath: /run
      nodeSelector:
        role: worker
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: helloworld-config
        configMap:
          name: helloworld-config
      - name: run
        emptyDir:
          medium: Memory
          sizeLimit: 500Mi
      - name: tmp
        emptyDir:
          medium: Memory
          sizeLimit: 500Mi
