helloworld/services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: helloworld-service
spec:
  selector:
    app: helloworld
  ports:
    - port: 80
      targetPort: 8080
