helloworld/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
spec:
  rules:
  - host: demoapp.mcsps.telekomcloud.com
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-service
          servicePort: 80
  tls:
  - hosts:
    - demoapp.mcsps.telekomcloud.com
    secretName: demoapp-mcsps-telekomcloud-com
